Fixing navbar z-index

--- a/src/www/themes/common/css/utils/lightwindow.less
+++ b/src/www/themes/common/css/utils/lightwindow.less
@@ -27,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100px;
-    z-index: 500;
+    z-index: 2000;
     /* REQUIRED */
 }
 
@@ -37,7 +37,7 @@
     display: none;
     visibility: hidden;
     position: absolute;
-    z-index: 999;
+    z-index: 2001;
     /* REQUIRED */
 }
 
